--- a/webapp/index.html
+++ b/webapp/index.html
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 <html>
 <head>
-    <title>title</title>
+    <title>ui5-challenge</title>
 
     <script
         id="sap-ui-bootstrap"
